# DREAM2

./: .gitignore  README.md
B1/: CMakeLists.txt  exampleB1.cc  init_vis.mac  run.mac  run1.mac  vis.mac
B1/include/: DetectorConstruction.hh
B1/src/: DetectorConstruction.cc  PrimaryGeneratorAction.cc
B2/: CMakeLists.txt  GNUmakefile  init_vis.mac  main.cc  run_all.mac  run_batch.sh  vis.mac
B2/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
B2/result/: PhotonData_E100GeV.root  PhotonData_E20GeV.root  PhotonData_E300GeV.root  PhotonData_E40GeV.root  PhotonData_E80GeV.root
B2/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
